--- a/myapp/home.html
+++ b/myapp/home.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <head>
-	<title>Farmers Store</title>
+	<title>Farmers' Store</title>
 	<link rel="stylesheet" href="home.css">
   <link rel="stylesheet" href="indexFooter.css">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.8/css/all.css" integrity="sha384-3AB7yXWz4OeoZcPbieVW64vVXEwADiYyAEhwilzWsLw+9FgqpyjjStpPnpBO8o8S" crossorigin="anonymous">
