--- a/myapp/welcome.html
+++ b/myapp/welcome.html
@@ -4,11 +4,14 @@
   <title>FarmersStore.com</title>
   <link rel="stylesheet" href="welcome.css">
   <link rel="stylesheet" href="indexFooter.css">
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+ 
  </head>
  <body>
   <div class="welcome">
-    <h1>WELCOME TO FARMERS' STORE</h1>
-    <p>Better price Better crop.</p>
+    <h1 class="display-5">WELCOME TO FARMERS' STORE</h1>
+    <p class="display-6">Better price Better crop.</p>
     <a href="home.html">EXPLORE</a>
   </div>
   
