--- a/myapp/welcome.html
+++ b/myapp/welcome.html
@@ -10,7 +10,7 @@
  </head>
  <body>
   <div class="welcome">
-    <h1 class="display-5">WELCOME TO FARMERS' STORE</h1>
+    <h1 class="display-5">WELCOME TO FARMERS' STORE</h1><br>
     <p class="display-6">Better price Better crop.</p>
     <a href="home.html">EXPLORE</a>
   </div>
