--- a/myapp/register.html
+++ b/myapp/register.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <head>
 	<title>Farmers' Store</title>
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" href="register.css">
 	<link rel="stylesheet" href="indexFooter.css">
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.8/css/all.css" integrity="sha384-3AB7yXWz4OeoZcPbieVW64vVXEwADiYyAEhwilzWsLw+9FgqpyjjStpPnpBO8o8S" crossorigin="anonymous">
